--- a/components/BottomNav.css
+++ b/components/BottomNav.css
@@ -12,7 +12,7 @@ nav {
 
 .nav-link {
   float: left;
-  width: 25%;
+  width: 20%;
   text-align: center;
   height: 45px;
   line-height: 45px;
@@ -28,7 +28,7 @@ nav {
 }
 
 .active {
-  color: white;
+  color: black;
   height: 1.5rem;
   width: 1.5rem;
   margin: auto;
